Fix #282 - Empty horizontal scroll in combos and listboxes - Fix scrollbar displayed in firefox (vertical and horizontal) - Fix horizontal scrollbar in listboxes

--- a/src/app/systelab-components/sass/_comboBox.scss
+++ b/src/app/systelab-components/sass/_comboBox.scss
@@ -143,6 +143,10 @@ $slab-combo-check-cell-padding: floor(18px*$slab-size-percentage) !default;
           }
         }
       }
+
+      .ag-body-horizontal-scroll {
+        display: none;
+      }
     }
 
     &.disabled {
